--- a/src/App.scss
+++ b/src/App.scss
@@ -1,13 +1,17 @@
 html {
-  background-color: #f4f4f4;
+    background-color: #f4f4f4;
 }
 
 .logo {
-  height: 3em;
-  pointer-events: none;
+    height: 3em;
+    pointer-events: none;
 }
 
-h1, h2, h3, h4, h5 {
-  pointer-events: none;
-  user-select: none;
+h1,
+h2,
+h3,
+h4,
+h5 {
+    pointer-events: none;
+    user-select: none;
 }
