--- a/src/App.scss
+++ b/src/App.scss
@@ -1,6 +1,4 @@
-html {
-  background-color: #f4f4f4;
-}
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans&display=swap");
 
 .logo {
   height: 3em;
